add number entering,del button ,reset button feature

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
   --key-shadow-4: hsl(28, 16%, 65%);
   --main-text-color: hsl(221, 14%, 31%);
   --secondary-text-color: hsl(0, 0%, 100%);
+  --third-text-color: var(--secondary-text-color);
+  --header-text-color: var(--secondary-text-color);
 }
 
 .theme-2 {
@@ -36,6 +38,8 @@
   --key-shadow-4: hsl(35, 11%, 61%);
   --main-text-color: hsl(60, 10%, 19%);
   --secondary-text-color: hsl(0, 0%, 100%);
+  --third-text-color: var(--secondary-text-color);
+  --header-text-color: hsl(60, 10%, 19%);
 }
 
 .theme-3 {
@@ -50,6 +54,8 @@
   --key-shadow-4: hsl(290, 70%, 36%);
   --main-text-color: hsl(52, 100%, 62%);
   --secondary-text-color: hsl(198, 20%, 13%);
+  --third-text-color: hsl(0, 0%, 100%);
+  --header-text-color: hsl(52, 100%, 62%);
 }
 
 * {
@@ -79,7 +85,7 @@
   justify-content: space-between;
   height: var(--calculator-hd-height);
   align-items: center;
-  color: var(--main-text-color);
+  color: var(--header-text-color);
 }
 .container__calculator-header-color-theme::before {
   content: "THEME";
@@ -89,6 +95,11 @@
   height: var(--screen-height);
   background-color: var(--background-color-screen);
   border-radius: var(--screen-b-radius);
+  text-align: end;
+  font-size: var(--numbers-fs);
+  align-content: center;
+  color: var(--main-text-color);
+  overflow: hidden;
 }
 .container__calculator-numbers-flex {
   display: flex;
@@ -99,6 +110,7 @@
   padding: 10px;
   background-color: var(--background-color-secondary);
   border-radius: 10px;
+  font-size: var(--numbers-fs);
   gap: 10px;
 }
 .container__calculator-numbers-flex div {
@@ -116,6 +128,9 @@
 }
 .container__calculator-numbers-flex div:last-child :last-child {
   color: var(--secondary-text-color);
+}
+.container__calculator-numbers-flex div:last-child :first-child {
+  color: var(--third-text-color);
 }
 
 .bottom {
@@ -137,12 +152,6 @@
 .bottom .equals {
   background-color: var(--key-toggle-bg-2);
   border-bottom: solid 3px var(--key-shadow-2);
-}
-
-.theme-1,
-.theme-2,
-.theme-3 {
-  background-color: var();
 }
 
 /*# sourceMappingURL=style.css.map */
