--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@
 }
 .container__calculator-header-color-theme::before {
   content: "THEME";
+  display: inline-block;
+  margin-right: 15px;
   font-size: var(--var-theme-fs);
 }
 .container__calculator-screen {
@@ -139,7 +141,7 @@
   gap: 20px;
 }
 .bottom div {
-  width: calc(var(--calculator-width) / 3);
+  width: calc(var(--calculator-width) / 2 - 40px);
   height: var(--calculator-hd-height);
   border-radius: 10px;
   align-content: center;
@@ -154,4 +156,27 @@
   border-bottom: solid 3px var(--key-shadow-2);
 }
 
-/*# sourceMappingURL=style.css.map */
+input[type=radio] {
+  display: none;
+}
+
+.theme-label {
+  position: relative;
+  display: inline-block;
+  font-size: 20px;
+  cursor: pointer;
+  width: 10px;
+  height: 10px;
+}
+
+input[type=radio]:checked + .theme-label:before {
+  content: "";
+  position: absolute;
+  background-color: rgb(236, 4, 4);
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  top: 20px;
+  left: 0px;
+}/*# sourceMappingURL=style.css.map */
