--- a/style.scss
+++ b/style.scss
@@ -119,6 +119,8 @@
       color: var(--header-text-color);
       &-color-theme::before {
         content: "THEME";
+        display: inline-block;
+        margin-right: 15px;
         font-size: var(--var-theme-fs);
       }
     }
@@ -176,7 +178,7 @@
   gap: 20px;
 
   div {
-    width: calc(var(--calculator-width) / 3);
+    width: calc((var(--calculator-width) / 2) - 2*20px);
     height: var(--calculator-hd-height);
     border-radius: 10px;
     align-content: center;
@@ -190,4 +192,31 @@
     background-color: var(--key-toggle-bg-2);
     border-bottom: solid 3px var(--key-shadow-2);
   }
+}
+
+$fsize-label: 20px;
+
+input[type="radio"]{
+  display: none;
+}
+
+.theme-label{
+  position: relative;
+  display: inline-block;
+  font-size: $fsize-label;
+  cursor: pointer;
+  width: 10px;
+  height: 10px;
+}
+
+input[type="radio"]:checked + .theme-label:before{
+  content: "";
+  position: absolute;
+  background-color: rgb(236, 4, 4);
+  display: block;
+  width: $fsize-label/2;
+  height: $fsize-label/2;
+  border-radius: 50%;
+  top: $fsize-label;
+  left: 0px;
 }
